--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,14 @@
 @import '~@entur/form/dist/styles.css';
 @import '~@entur/icons/dist/styles.css';
 @import '~@entur/layout/dist/styles.css';
+@import '~@entur/loader/dist/styles.css';
 @import '~@entur/menu/dist/styles.css';
+@import '~@entur/table/dist/styles.css';
 @import '~@entur/tokens/dist/styles.css';
 @import '~@entur/typography/dist/styles.css';
+@import '~@entur/expand/dist/styles.css';
+@import '~@entur/tooltip/dist/styles.css';
+@import '~@entur/alert/dist/styles.css';
 
 body {
     margin: 0;
