--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@
 @import '~@entur/expand/dist/styles.css';
 @import '~@entur/tooltip/dist/styles.css';
 @import '~@entur/alert/dist/styles.css';
+@import '~@entur/a11y/dist/styles.css';
+@import '~@entur/chip/dist/styles.css';
+@import '~@entur/dropdown/dist/styles.css';
+@import '~@entur/modal/dist/styles.css';
+@import '~@entur-partner/common/dist/styles.css';
 
 body {
   margin: 0;
